--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Animation
+    implementation 'com.daimajia.easing:library:2.1@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
 
 }
